# LLMs-from-scratch

./: .gitignore  README.md  pyproject.toml
ch02/01_main-chapter-code/: ch02.ipynb  dataloader.py  exercise-solutions.ipynb  notes.md
ch02/02_bonus_bytepair-encoder/: compare-bpe-tiktoken.ipynb
ch02/03_bonus_embedding-vs-matmul/: embedding-and-linear-layers.ipynb
ch02/04_bonus_dataloader-intuition/: dataloader-intuition.ipynb
ch02/05_bpe-from-scratch/: bpe-from-scratch-simple.ipynb  bpe-from-scratch.ipynb
ch03/: notes.md
ch03/01_main-chapter-code/: ch03.ipynb  exercise-solutions.ipynb  multihead_attention.py
ch03/02_bonus_efficient-multihead-attention/: mha-implementations.ipynb
ch03/03_understanding-buffers/: understanding-buffers.ipynb
ch04/: notes.md
ch04/01_main-chapter-code/: ch04.ipynb
