[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
]

[dependency-groups]
extra = [
    "requests>=2.34.2",
    "tqdm>=4.68.2",
    "transformers>=5.11.0",
]
